Make `flowpy` installable

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,10 @@
 [metadata]
 name = flowpy
-version = 0.0.1
+version = 0.1
 
 [options]
-package_dir=
-    =src
+packages=find:
 
 [options.entry_points]
 console_scripts =
     flowpy = flowpy.main:main
-
-[options.packages.find]
-where=src
